<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NETCHA</string>
    <string name="main_page_toolbar">HOME</string>
    <string name="main_page_text_login_user">환영합니다</string>
    <string name="main_page_text_recommend_movie">추천 영화 목록</string>
    <string name="mypage_title_jina">진아 페이지</string>
    <string name="mypage_title_yongsuk">용석 페이지</string>
    <string name="mypage_title_hyerin">혜린 페이지</string>
    <string name="mypage_title_donghyun">동현 페이지</string>
    <string name="mypage_title_minji">민지 페이지</string>
    <string name="mypage_text_profile">프로필</string>
    <string name="mypage_text_preferGenre">선호 영화 장르</string>
    <string name="mypage_text_genre_action">액션</string>
    <string name="mypage_text_genre_comedy">코미디</string>
    <string name="mypage_text_genre_thriller">스릴러</string>
    <string name="mypage_text_genre_romance">로맨스</string>
    <string name="mypage_text_genre_horror">공포</string>
    <string name="mypage_text_genre_sf">SF</string>
    <string name="mypage_text_genre_fantasy">판타지</string>
    <string name="mypage_text_genre_crime">범죄</string>
    <string name="mypage_text_genre_mystery">추리</string>
    <string name="mypage_text_best_movie">인생 영화</string>
    <string name="mypage_btn_movie1">신세계</string>
    <string name="mypage_btn_movie2">귀공자</string>
    <string name="mypage_btn_movie3">마녀</string>
    <string name="mypage_btn_movie4">폰부스</string>
    <string name="mypage_btn_movie5">분노의질주</string>
    <string name="mypage_btn_movie6">7광구</string>
    <string name="mypage_btn_movie7">해리포터</string>
    <string name="mypage_btn_movie8">범죄도시</string>
    <string name="mypage_btn_movie9">나의 \n 소녀시대</string>
    <string name="mypage_btn_movie10">라라랜드</string>
    <string name="mypage_btn_movie11">주토피아</string>
    <string name="mypage_btn_movie12">셜록홈즈</string>
    <string name="mypage_btn_movie13">검사외전</string>
    <string name="mypage_btn_movie14">행오버</string>
    <string name="mypage_btn_movie15">세렌디피티</string>
    <string name="mypage_title_quote">기억에 남는 명대사</string>
    <string name="mypage_text_quote_yongsuk">\" 아직 한 발 남았다. \"</string>
    <string name="mypage_text_quote_jina">\" 가장 어두운 시간에도 행복은 존재한단다. 불을 켜는 것을 잊지 않는다면 말이야. \"</string>
    <string name="mypage_text_quote_hyerin">\" 꿈을 꾸는 그댈 위하여, 비록 바보같다 하여도. 상처입은 가슴을 위하여, 우리의 시행착오를 위하여 \"</string>
    <string name="mypage_text_quote_donghyun">\" 우연히 찾아온 행운 \"</string>
    <string name="mypage_text_quote_minji">\" 꿈은 도망가지 않아, 도망가는건 언제나 나 자신이야 \"</string>
    <string name="detail_page_summary_summary_movie4">\" 더 이상 물러설 곳이 없는 팀의 맏형 고반장은 \n 국제 범죄조직의 국내 마약 밀반입 정황을 포착하고 \n 장형사, 마형사, 영호, \n 재훈까지 4명의 팀원들과 함께 잠복 수사에 나선다. \n 마약반은 24시간 감시를 위해 범죄조직의 \n 아지트 앞 치킨집을 인수해 창업을 하게 되고, \n 뜻밖의 절대미각을 지닌 마형사의 숨은 재능으로 \n 치킨집은 일약 맛집으로 입소문이 나기 시작한다. \n 수사는 뒷전, \n 치킨장사로 눈코 뜰 새 없이 바빠진 마약반에게 \n 어느 날 절호의 기회가 찾아오는데… \n 범인을 잡을 것인가, 닭을 잡을 것인가! \"</string>
    <string name="detail_page_summary_movie4">\" 더 이상 물러설 곳이 없는 팀의 맏형 고반장은 \n 국제 범죄조직의 국내 마약 밀반입 정황을 \n 포착하고 장형사, 마형사, 영호, 재훈까지 \n 4명의 팀원들과 함께 잠복 수사에 나선다. \n 마약반은 24시간 감시를 위해 범죄조직의 \n 아지트 앞 치킨집을 인수해 창업을 하게 되고, \n 뜻밖의 절대미각을 지닌 마형사의 숨은 재능으로 \n 치킨집은 일약 맛집으로 입소문이 나기 시작한다. \n 수사는 뒷전, \n 치킨장사로 눈코 뜰 새 없이 바빠진 마약반에게 \n 어느 날 절호의 기회가 찾아오는데… \n 범인을 잡을 것인가, 닭을 잡을 것인가! \"</string>
    <string name="detail_page_summary_summary_movie5">\" 불행한 사건으로 아내를 \n 잃고 세상을 등진 채 \n 전당포를 하며 살아가는 \n 전 특수요원 태식. \n 세상으로부터 버림받은 \n 소미와 함께 보내는 시간이 많아지면서 \n 태식과 소미는 서로 마음을 열며 친구가 되어간다. \n 그러던 어느 날 소미가 갑자기 사라진다. \n 소미의 행방을 쫓아 다시 세상 밖으로 나오게 된 태식. \n 단 하나뿐인 친구인 소미를 위험에서 지켜내기 위해 \n 범죄조직과 모종의 거래를 하지만 소미의 행방은 여전히 묘연하고, \n 경찰이 태식을 뒤쫓기 시작하면서 \n 태식은 범죄조직과 경찰 양 쪽의 추격을 받게 되는데… \"</string>
    <string name="detail_page_summary_movie5">\" 불행한 사건으로 아내를 잃고 세상을 등진 채 \n 전당포를 하며 살아가는 전 특수요원 태식. \n 세상으로부터 버림받은 소미와 함께 보내는 \n 시간이 많아지면서 태식과 소미는 \n 서로 마음을 열며 친구가 되어간다. \n 그러던 어느 날 소미가 갑자기 사라진다. \n 소미의 행방을 쫓아 다시 세상 밖으로 나오게 된 태식. 단 하나뿐인 친구인 소미를 위험에서 \n 지켜내기 위해 범죄조직과 모종의 거래를 하지만 \n 소미의 행방은 여전히 묘연하고, \n 경찰이 태식을 뒤쫓기 시작하면서 \n 태식은 범죄조직과 경찰 양 쪽의 추격을 받게 \n 되는데… \"</string>
    <string name="detail_page_summary_summary_movie6">\" 파리로 여행을 떠난 딸 \n 킴이 아버지 브라이언과 \n 통화를 하던 중 납치 당한다. 아무런 이유도 단서도 없다. \n 유력한 조직원의 옷에 \n 몰래 도청장치를 숨겨 넣는데 \n 성공한 브라이언은 조직의 또 다른 근거지에 \n 납치당한 여성들이 갇혀 있음을 알게 된다. \n 킴이 납치당하던 순간 \n 휴대전화를 향해 소리쳤던 외모를 그대로 지닌 ‘놈’. \n 브라이언은 특수 요원 시절 익힌 잔혹한 기술을 동원해 \n 결정적 단서를 얻고, 일생일대의 사투를 시작하는데… \"</string>
    <string name="detail_page_summary_movie6">\" 파리로 여행을 떠난 딸 킴이 \n 아버지 브라이언과 통화를 하던 중 납치 당한다. \n 아무런 이유도 단서도 없다. \n 유력한 조직원의 옷에 몰래 도청장치를 숨기는데 \n 성공한 브라이언은 조직의 또 다른 근거지에 \n 납치당한 여성들이 갇혀 있음을 알게 된다. \n 킴이 납치당하던 순간 휴대전화를 향해 소리쳤던 \n 외모를 그대로 지닌 ‘놈’. \n 브라이언은 특수 요원 시절 익힌 잔혹한 기술을 \n 동원해 결정적 단서를 얻고, 일생일대의 사투를 \n 시작하는데… \"</string>
    <string name="detail_page_review4">한국인의 입맛 당기는 \n 확실한 코미디</string>
    <string name="detail_page_reviewer4">정유미</string>
    <string name="detail_page_review5">한국 액션영화의 \n 새로운 감각</string>
    <string name="detail_page_reviewer5">이동진</string>
    <string name="detail_page_review6">아버지 주먹은 \n 단순명쾌했네</string>
    <string name="detail_page_reviewer6">박평식</string>
    <string name="movie_detail">영화 상세</string>
    <string name="movie_detail_preview">예고편</string>
    <string name="movie_detail_actor">출연</string>
    <string name="movie_detail_rating">평점</string>
    <string name="movie_detail_plot">줄거리</string>
    <string name="movie_detail_sense">명장면</string>
    <string name="detialpage_summary_movie1">10년 전 의문의 사고가 일어난 시설에서 홀로 탈출한 후 모든 기억을 잃은 ‘자윤’. 나이도, 이름도 모르는 자신을 거두고 키워준 노부부의 보살핌으로 씩씩하고 밝은 여고생으로 자라났다. 어려운 집안사정을 돕기 위해 상금이 걸린 오디션 프로그램에 출연한 자윤, 방송이 나간 직후부터 의문의 인물들이 그녀 앞에 나타난다. 자윤의 주변을 맴돌며 날카롭게 지켜보는 남자 ‘귀공자’, 그리고 과거 사고가 일어난 시점부터 사라진 아이를 찾던 ‘닥터 백’과 ‘미스터 최’까지 자신은 전혀 기억하지 못하는 그들의 등장으로, 자윤은 혼란에 휩싸이게 되는데…! 그들이 나타난 후 모든 것이 바뀌었다</string>
    <string name="signin_page_main_title">Welcome to</string>
    <string name="signin_page_sub_title">NetCha</string>
    <string name="signin_page_tv_id">아이디</string>
    <string name="signin_page_et_id_hint">아이디를 입력하세요</string>
    <string name="signin_page_tv_pw">비밀번호</string>
    <string name="signin_page_et_pw_hint">비밀번호를 입력하세요</string>
    <string name="signin_page_btn_login">로그인</string>
    <string name="signin_page_btn_join">회원가입</string>
    <string name="signin_page_btn_find">아이디 / 비밀번호 찾기</string>
    <string name="signin_page_btn_secession">회원탈퇴</string>
    <string name="detialpage2_character1">브래들리 쿠퍼</string>
    <string name="detialpage2_character2">에드\n 헬름스</string>
    <string name="detailpage_summary_movie2">2년 전 라스베가스에서 신랑 실종사건이라는 지독한 행오버를 겪었던 세 친구 ‘필(브래들리 쿠퍼)’, ‘스튜(에드 헬름스)’, ‘앨런(잭 가리피아나키스)’. 그 때의 참사로 약혼녀와 파혼하고 새로운 여자친구를 만난 ‘스튜’의 결혼식에 참석하기 위해 삼인방은 태국으로 건너간다. 이전의 악몽을 되풀이하지 않겠다 다짐하며 ‘딱 한 잔만’ 마셨는데.. 허거걱, 눈 떠 보니 방콕! ‘또.또.또’ 필름이 끊겼다!! 머리가 싹 다 밀린 앨런, 스튜의 얼굴엔 현란한 타투, 남겨진 건 왕 귀여운 조끼 입은 원숭이와 음란한 송이버섯(?), 그리고 신부 동생의 손가락 하나! 대체 어젯밤 무슨 일이? 어쩐지 이번엔 더욱더 험악한 ‘행오버’에 시달릴 것만 같다?!</string>
    <string name="ratingreview_movie2_detailpage">거리낄 것 없는 코미디,\n  지치지 않은 속편</string>
    <string name="ratingreview_movie1_detailpage">기시감의 연속.\n 김다미의 발굴에는 박수를</string>
    <string name="rating_movie2_detailpage">이형석</string>
    <string name="rating_movie1_detailpage">임수연</string>
    <string name="detailpage_more">더보기</string>
    <string name="detialpage3_character1">엠마 스톤</string>
    <string name="detialpage3_character2">라이언 고슬링</string>
    <string name="detialpage_summary_movie3">꿈을 꾸는 사람들을 위한 별들의 도시 ‘라라랜드’. 재즈 피아니스트 ‘세바스찬’(라이언 고슬링)과 배우 지망생 ‘미아’(엠마 스톤), 인생에서 가장 빛나는 순간 만난 두 사람은 미완성인 서로의 무대를 만들어가기 시작한다.</string>
    <string name="ratingreview_movie3_detailpage">우리가 영화와\n  사랑에 빠지는\n 거의 모든 이유가\n  이 영화 속에 있다.</string>
    <string name="rating_movie3_detailpage">한동원</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="up_netcha_text">NetCha</string>
    <string name="up_name_text">닉네임</string>
    <string name="up_name_edit_text">최소 3글자 이상 영문으로 작성해주세요.</string>
    <string name="up_id_text">아이디</string>
    <string name="up_id_edit_text">최소 3글자 이상 영문 및 숫자로 작성해주세요.</string>
    <string name="up_check_button">중복체크</string>
    <string name="up_pw_text">비밀번호</string>
    <string name="up_pw_edit_text">최소 3글자 이상 영어+특수문자로 작성해주세요</string>
    <string name="up_sign_up_button">가입하기</string>
    <string name="detail_page4_text_character1">류승룡</string>
    <string name="detail_page4_text_character2">이하늬</string>
    <string name="detail_page5_text_character1">원빈</string>
    <string name="detail_page5_text_character2">김새론</string>
    <string name="detail_page6_text_character1">리암니슨</string>
    <string name="detail_page6_text_character2">매기그레이스</string>
    <string name="activity_user_data_find_user_find_tv_name">닉네임</string>
    <string name="activity_user_data_find_user_find_et_id">닉네임을 입력하세요</string>
    <string name="activity_user_data_user_find_btn_login">확인</string>
    <string name="activity_user_data_user_find_tv_fail">입력하신 정보가 올바르지 않습니다.</string>
    <string name="detail_page1_text_character1">김다미</string>
    <string name="detail_page1_text_character2">조수미</string>
    <string name="detail_page_story_popup_fold">접기</string>
    <string name="main_page_tv_user_last_char">님</string>
    <string name="main_page_tv_user_logout">로그아웃 하시겠습니까?</string>
    <string name="main_page_tv_user_logout_no">취소</string>
    <string name="main_page_tv_user_logout_yes">확인</string>
</resources>