<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".UserDataFind">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/user_find_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:theme="@style/main_page_toolbar_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/signin_page_btn_find"
        app:titleTextAppearance="@style/main_page_toolbar_text_size"
        app:titleTextColor="@color/yellow" />

    <ImageView
        android:id="@+id/user_find_iv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:src="@drawable/happydog5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/user_find_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:fontFamily="@font/chosun_font"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_find_iv1"/>

    <TextView
        android:id="@+id/user_find_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chosun_font"
        android:text="@string/activity_user_data_find_user_find_tv_name"
        android:textSize="18sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_find_title" />


    <EditText
        android:id="@+id/user_find_et_id"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_round_shape"
        android:ems="10"
        android:paddingStart="15dp"
        android:inputType="text"
        android:fontFamily="@font/chosun_font"
        android:hint="@string/activity_user_data_find_user_find_et_id"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_find_tv_name" />

    <Button
        android:id="@+id/user_find_btn_login"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/chosun_font"
        android:text="@string/activity_user_data_user_find_btn_login"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_find_et_id" />

    <TextView
        android:id="@+id/user_find_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="아이디: "
        android:fontFamily="@font/chosun_font"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_find_btn_login"/>

    <TextView
        android:id="@+id/user_find_tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:text="비밀번호: "
        android:fontFamily="@font/chosun_font"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_find_tv_id"/>

    <ImageView
        android:id="@+id/user_find_iv_fail"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/happydog4"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_find_btn_login" />

    <TextView
        android:id="@+id/user_find_tv_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/chosun_font"
        android:gravity="center"
        android:text="@string/activity_user_data_user_find_tv_fail"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_find_tv_pw" />

    <ImageView
        android:id="@+id/backbutton_user_data_find"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/user_find_toolbar"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />


</androidx.constraintlayout.widget.ConstraintLayout>