<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MovieDetailPage2">
    <ImageView
        android:id="@+id/detailpage2_btn_back"
        android:layout_width="51dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />


    <TextView
        android:id="@+id/detailpage2_text_moviedetail"
        android:layout_width="168dp"
        android:layout_height="52dp"
        android:layout_marginEnd="112dp"
        android:fontFamily="@font/chosun_font"
        android:text="@string/movie_detail"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/detailpage2_image_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />


    <TextView
        android:id="@+id/detailpage2_text_pregview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/chosun_font"
        android:text="@string/movie_detail_preview"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/detailpage2_image_preview"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="centerCrop"
        android:src="@drawable/detailpage_moviescene2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detailpage2_nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailpage2_image_preview">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailpage2_contentAreaWrapper1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detailpage2_constraintLayout1"
                android:layout_width="155dp"
                android:layout_height="187dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/detailpage_btn_begie"
                app:layout_constraintBottom_toTopOf="@id/detailpage2_constraintLayout3"
                app:layout_constraintEnd_toStartOf="@+id/detailpage2_constraintLayout2"
                app:layout_constraintHorizontal_bias="0.099"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailpage2_constraintLayout2"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/detailpage2_text_character"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/chosun_font"
                    android:text="@string/movie_detail_actor"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.133"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/detailpage2_img_character1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/main_page_profile_shape"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/detailpage_movie2_character1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detailpage2_text_character" />

                <TextView
                    android:id="@+id/detailpage2_character1"
                    android:layout_width="62dp"
                    android:layout_height="31dp"
                    android:fontFamily="@font/chosun_font"
                    android:gravity="center"
                    android:text="@string/detialpage2_character1"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/detailpage2_img_character1"
                    app:layout_constraintStart_toStartOf="@+id/detailpage2_img_character1"
                    app:layout_constraintTop_toBottomOf="@+id/detailpage2_img_character1" />

                <TextView
                    android:id="@+id/detailpage2_img_character2"
                    android:layout_width="51dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/chosun_font"
                    android:gravity="center"
                    android:text="@string/detialpage2_character2"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/detailpage2_character2"
                    app:layout_constraintHorizontal_bias="0.555"
                    app:layout_constraintStart_toStartOf="@+id/detailpage2_character2"
                    app:layout_constraintTop_toBottomOf="@+id/detailpage2_character2" />

                <ImageView
                    android:id="@+id/detailpage2_character2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/main_page_profile_shape"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/detailpage_movie2_character2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/detailpage2_img_character1"
                    app:layout_constraintTop_toBottomOf="@+id/detailpage2_text_character" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detailpage2_constraintLayout2"
                android:layout_width="155dp"
                android:layout_height="187dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/detailpage_btn_purple"
                app:layout_constraintBottom_toTopOf="@id/detailpage2_constraintLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.945"
                app:layout_constraintStart_toEndOf="@id/detailpage2_constraintLayout1"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/detailpage2_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/chosun_font"
                    android:text="@string/movie_detail_rating"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.069"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RatingBar
                    android:id="@+id/detailpage2_ratingBar"
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                    android:layout_width="81dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="12dp"
                    android:numStars="5"
                    android:progressTint="@color/beige"
                    android:rating="4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.108"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detailpage2_rating" />

                <TextView
                    android:id="@+id/detailpage2_rating_review"
                    android:layout_width="121dp"
                    android:layout_height="32dp"
                    android:fontFamily="@font/titlefont"
                    android:gravity="right"
                    android:text="@string/ratingreview_movie2_detailpage"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.647"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detailpage2_ratingBar"
                    app:layout_constraintVertical_bias="0.12" />

                <TextView
                    android:id="@+id/detailpage2_rating_reviewer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:fontFamily="@font/titlefont"
                    android:gravity="right"
                    android:text="@string/rating_movie2_detailpage"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.902"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detailpage2_rating_review"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detailpage2_constraintLayout3"
                android:layout_width="155dp"
                android:layout_height="187dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/detailpage_btn_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/detailpage2_constraintLayout4"
                app:layout_constraintHorizontal_bias="0.098"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailpage2_constraintLayout1">

                <TextView
                    android:id="@+id/detailpage2_summury"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/chosun_font"
                    android:text="@string/movie_detail_plot"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/detailpage2_summury_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.112"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/detailpage2_summury_detail"
                    android:layout_width="122dp"
                    android:layout_height="112dp"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/chosun_font"
                    android:maxLines="6"
                    android:text="@string/detailpage_summary_movie2"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/view_more"
                    android:layout_width="41dp"
                    android:layout_height="18dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/titlefont"
                    android:gravity="center"
                    android:text="@string/detailpage_more"
                    android:textColor="@color/green"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.369"
                    app:layout_constraintStart_toStartOf="@+id/detailpage2_summury_detail" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detailpage2_constraintLayout4"
                android:layout_width="155dp"
                android:layout_height="187dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/deatailpage_btn_yellow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.921"
                app:layout_constraintStart_toEndOf="@id/detailpage2_constraintLayout3"
                app:layout_constraintTop_toBottomOf="@+id/detailpage2_constraintLayout2"
                app:layout_constraintVertical_bias="0.51">

                <TextView
                    android:id="@+id/detialpage1_famous_sense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/chosun_font"
                    android:text="@string/movie_detail_sense"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.137"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/detialpage_img_sense2"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.48"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detialpage1_famous_sense"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/detailpage2_image_sense" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>